# tronz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  LICENSE-APACHE  Makefile  README.md  SECURITY.md  cliff.toml  deny.toml  release.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/workflows/: ci.yml
crates/contract/: Cargo.toml  README.md
crates/contract/src/: call.rs  deploy.rs  error.rs  event.rs  instance.rs  interface.rs  lib.rs
crates/contract/src/trc20/: instance.rs  mod.rs
crates/contract/src/trc721/: instance.rs  mod.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: address.rs  amount.rs  error.rs  lib.rs  resource.rs  signature.rs
crates/provider/: Cargo.toml  README.md  build.rs
crates/provider/src/: error.rs  lib.rs
crates/provider/src/builders/: account.rs  contract.rs  delegate.rs  freeze.rs  mod.rs  permission.rs  rewards.rs  transfer.rs  vote.rs  withdraw.rs
crates/provider/src/ext/: exchange.rs  governance.rs  market.rs  mod.rs  trc10.rs  witness.rs
crates/provider/src/fillers/: mod.rs
crates/provider/src/proto/: mod.rs
crates/provider/src/provider/: builder.rs  mod.rs  pending.rs  root.rs
crates/provider/src/transport/: mod.rs
crates/provider/src/transport/grpc/: codec.rs  mod.rs
crates/provider/src/types/: account.rs  block.rs  contract.rs  exchange.rs  market.rs  mod.rs  network.rs  receipt.rs  transaction.rs  trc10.rs
crates/provider/tests/: integration.rs
crates/signer/: Cargo.toml  README.md
crates/signer/src/: error.rs  keystore.rs  lib.rs  local.rs  mnemonic.rs  signer.rs
crates/tronz/: Cargo.toml  README.md
crates/tronz/src/: lib.rs
examples/: Cargo.toml  README.md
examples/examples/: account_permissions.rs  account_update.rs  address_formats.rs  amount_math.rs  claim_rewards.rs  connect_custom.rs  contract_call.rs  contract_deploy.rs  contract_dynamic_abi.rs  contract_estimate_energy.rs  contract_revert.rs  contract_send.rs  decode_log.rs  delegate.rs  list_witnesses.rs  signer_generate.rs  signer_local.rs  stake_bandwidth.rs  transfer_trx_memo.rs  trc10_balance.rs  trc10_issue.rs  trc10_query.rs  trc10_transfer.rs  trc20_decode_transfer_event.rs  trc20_transfer_from.rs  unfreeze.rs  vote_witness.rs  withdraw_unfreeze.rs
