[package]
name         = "examples"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[dependencies]
tronz            = { path = "../crates/tronz" }
alloy-primitives = { workspace = true }
alloy-dyn-abi    = { workspace = true }
alloy-json-abi   = { workspace = true }
k256             = { workspace = true }
anyhow           = "1"
hex              = { workspace = true }
rand             = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
