[package]
name         = "tronz-signer"
description  = "Signing traits and local key signer for the tronz TRON SDK."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[dependencies]
tronz-primitives = { workspace = true }
k256             = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
